last significant changes

--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -42,7 +42,7 @@ a
 .selected-button > *
   background: $agona-blue
 
-.selected-button path
+.selected-button path , .selected-button svg
   fill: $svg-white
 
 .collection-button , .add-button, .search-button
