--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -11,7 +11,7 @@ a {
   font-size: 18px;
   font-weight: 500;
   display: flex;
-  padding: 23px 32px 23px 26px;
+  padding: 13px 32px 13px 26px;
   justify-content: space-between;
   align-items: center;
   background-color: rgba(249, 249, 249, 0.94);
@@ -50,6 +50,7 @@ a {
   align-items: center;
   display: flex;
   gap: 12px;
+  font-size: 15px;
 }
 
 .collection-button svg, .add-button svg, .search-button svg {
