--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -1,7 +1,4 @@
-$header-color: rgba(249, 249, 249, 0.94)
-$agona-blue: #002DFF
-$svg-white: #fff
-$font-color: black
+@import "colors.sass"
 
 a
   text-decoration: none
@@ -15,7 +12,7 @@ a
     font-size: 18px
     font-weight: 500
     display: flex
-    padding: 23px 32px 23px 26px
+    padding: 13px 32px 13px 26px
     justify-content: space-between
     align-items: center
     background-color: $header-color
@@ -50,8 +47,11 @@ a
   align-items: center
   display: flex
   gap: 12px
+  font-size: 15px
+
 
 .collection-button svg , .add-button svg, .search-button svg
   fill: $agona-blue
+
 
 
