--- a/src/styles/search.sass
+++ b/src/styles/search.sass
@@ -1,19 +1,18 @@
-$input-color: rgba(60, 60, 67, 0.30)
-$agona-blue: #002DFF
+@import "colors.sass"
 
 .body-container
   display: flex
   justify-content: center
   align-items: center
   flex-direction: column
-  gap: 45px
+  gap: 38px
   margin-top: 82px
 
 .search-header
   display: flex
   flex-direction: column
   gap: 35px
-  width: 560px
+  width: 462px
 
 .search-input
   width: 100%
@@ -28,15 +27,15 @@ $agona-blue: #002DFF
     margin: 0 19px
 
 .search-collection
-  width: 560px
+  width: 462px
   display: flex
   flex-direction: column
-  gap: 47px
+  gap: 39px
 
 .images-section
   display: flex
   flex-direction: column
-  gap: 30px
+  gap: 20px
 
 .section-buttons
   display: flex
@@ -56,4 +55,4 @@ $agona-blue: #002DFF
 .items-list
   display: flex
   flex-wrap: wrap
-  gap: 25px
+  gap: 16px
