--- a/src/styles/search.sass
+++ b/src/styles/search.sass
@@ -18,7 +18,6 @@
   width: 100%
   font-size: 17px
   font-weight: 400
-  color: $input-color
   padding: 16px 0
   border: none
 
@@ -31,6 +30,7 @@
   display: flex
   flex-direction: column
   gap: 39px
+  padding-bottom: 211px
 
 .images-section
   display: flex
