--- a/src/styles/collection.sass
+++ b/src/styles/collection.sass
@@ -4,7 +4,7 @@
   display: flex
   flex-direction: column
   align-items: center
-  padding-top: 72px
+  padding: 72px 0  111px 0
   gap: 38px
 
 .collection
