--- a/src/styles/collection.sass
+++ b/src/styles/collection.sass
@@ -49,9 +49,9 @@
   display: flex
   align-items: center
 
-.will-watch-button , .watched-button
+.first-button , .second-button
   text-align: center
-  font-size: 15px
+  font-size: 16px
   font-weight: 600
   line-height: 20px
   margin: 3px
@@ -59,10 +59,19 @@
   border: none
   cursor: pointer
 
+
+.second-button
+  padding: 6px 10px
+
+.button-text
+  display: flex
+  justify-content: center
+  width: 157px
+
 .chosen-button
   background-color: $chosen-button-color
-  border-radius: 8px
-  padding: 6px 30px
+  border-radius: 9px
+  padding: 6px 12px
   box-shadow: 0 3px 1px 0 $box-shadow-first-color, 0 3px 8px 0 $box-shadow-second-color
 
 .watched-button
