--- a/src/styles/colors.sass
+++ b/src/styles/colors.sass
@@ -9,3 +9,5 @@ $rating-background: white
 $header-color: rgba(249, 249, 249, 0.94)
 $svg-white: #fff
 $font-color: black
+$authorize-span-color:rgba(60, 60, 67, 0.60)
+$authorize-button-color: rgba(116, 116, 128, 0.08)
