--- a/src/styles/collection.css
+++ b/src/styles/collection.css
@@ -51,9 +51,9 @@
   align-items: center;
 }
 
-.will-watch-button, .watched-button {
+.first-button, .second-button {
   text-align: center;
-  font-size: 15px;
+  font-size: 16px;
   font-weight: 600;
   line-height: 20px;
   margin: 3px;
@@ -62,10 +62,20 @@
   cursor: pointer;
 }
 
+.second-button {
+  padding: 6px 10px;
+}
+
+.button-text {
+  display: flex;
+  justify-content: center;
+  width: 157px;
+}
+
 .chosen-button {
   background-color: white;
-  border-radius: 8px;
-  padding: 6px 30px;
+  border-radius: 9px;
+  padding: 6px 12px;
   box-shadow: 0 3px 1px 0 rgba(0, 0, 0, 0.04), 0 3px 8px 0 rgba(0, 0, 0, 0.12);
 }
 
